syntax = "proto3";
import "common.proto";
package onedb;

option java_package = "com.hufudb.onedb.rpc";
option java_outer_classname = "OneDBService";


message GeneralRequest {
  string value = 1;
}

message GeneralResponse {
  int32 status = 1;
  string msg = 2;
}

service Service {
  rpc AddClient(GeneralRequest) returns (GeneralResponse);
  rpc GetTableHeader(GeneralRequest) returns (HeaderProto);
  rpc GetAllLocalTable(GeneralRequest) returns (LocalTableListProto);
  rpc OneDBQuery(OneDBQueryProto) returns (stream DataSetProto);
}